--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,16 +2,31 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Web site created using create-react-app" />
+        <link
+            rel="icon"
+            href="%PUBLIC_URL%/favicon.png"
+        />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1"
+        />
+        <meta
+            name="theme-color"
+            content="#000000"
+        />
+        <meta
+            name="description"
+            content="Web site created using create-react-app"
+        />
         <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <link
+            rel="manifest"
+            href="%PUBLIC_URL%/manifest.json"
+        />
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,6 +37,38 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>Twitter</title>
+
+        <link
+            rel="preload"
+            href="../src/assets/fonts/Chirp-Regular.woff2"
+            as="font"
+            type="font/woff2"
+            crossorigin="anonymous"
+        />
+
+        <link
+            rel="preload"
+            href="../src/assets/fonts/Chirp-Heavy.woff2"
+            as="font"
+            type="font/woff2"
+            crossorigin="anonymous"
+        />
+
+        <link
+            rel="preload"
+            href="../src/assets/fonts/Chirp-Medium.woff2"
+            as="font"
+            type="font/woff2"
+            crossorigin="anonymous"
+        />
+
+        <link
+            rel="preload"
+            href="../src/assets/fonts/Chirp-Bold.woff2"
+            as="font"
+            type="font/woff2"
+            crossorigin="anonymous"
+        />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
